[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llclient"
version = "5.0.0"
dependencies = [
    "PyYAML",
    "Wand",
    "requests",
    "requests-toolbelt",
    "watchdog",
]

[project.scripts]
llclient = "llclient.poll:main"

[tool.setuptools]
packages = ["llclient"]

[tool.mypy]
mypy_path = "stubs"
warn_return_any = true
warn_unused_configs = true
