[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llclient"
version = "5.0.1"
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "Wand",
    "requests",
    "requests-toolbelt",
    "watchdog",
]

[project.scripts]
llclient = "llclient.poll:main"

[tool.setuptools]
packages = ["llclient"]

[tool.mypy]
mypy_path = "stubs"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]
